<resources>
    <string name="app_name">Tasky</string>

    <string name="login_welcome_message">Welcome Back!</string>
    <string name="email_address_preview">Email address</string>
    <string name="password_preview">Password</string>
    <string name="login_button">LOG IN</string>
    <string name="no_account_message">DON\'T HAVE AN ACCOUNT?</string>
    <string name="sign_up_button">SIGN UP</string>
    <string name="register_welcome_message">Create your account</string>
    <string name="name_preview">Name</string>
    <string name="get_started_button">GET STARTED</string>

    <string name="task">Task</string>
    <string name="event">Event</string>
    <string name="reminder">Reminder</string>
    <string name="agenda">Agenda</string>
    <string name="edit_task_text">EDIT TASK</string>
    <string name="edit_event_text">EDIT EVENT</string>
    <string name="edit_reminder_text">EDIT REMINDER</string>

    <string name="edit_title_text">EDIT TITLE</string>
    <string name="edit_description_text">EDIT DESCRIPTION</string>

    <string name="save_button">Save</string>
    <string name="add_photos">Add photos</string>
    <string name="photos">Photos</string>
    <string name="photo">Photo</string>
    <string name="at">At</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="visitors">Visitors</string>
    <string name="all">All</string>
    <string name="going">Going</string>
    <string name="not_going">Not going</string>
    <string name="creator">creator</string>
    <string name="join_event">JOIN EVENT</string>
    <string name="leave_event">LEAVE EVENT</string>
    <string name="delete_blank">DELETE %1$s</string>

    <!--Reminder time options popup menu on agenda item detail screen -->
    <string name="ten_minutes_before">10 minutes before</string>
    <string name="thirty_minutes_before">30 minutes before</string>
    <string name="one_hour_before">1 hour before</string>
    <string name="six_hours_before">6 hours before</string>
    <string name="one_day_before">1 day before</string>

    <!--Delete confirmation options on delete confirmation dialog -->
    <string name="task_delete_confirmation">Are you sure you want to delete this task?</string>
    <string name="event_delete_confirmation">Are you sure you want to delete this event?</string>
    <string name="are_you_sure_you_want_to_delete_this_string">Are you sure you want to delete this %1$s?</string>

    <!--Agenda item options popup menu on agenda screen -->
    <string name="open">Open</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="logout">Logout</string>

    <!--currentDateTextView days on agenda screen -->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>

    <!--Add attendee dialog box -->
    <string name="add_visitor">Add visitor</string>
    <string name="add">Add</string>

    <!--error messages -->
    <string name="error_invalid_password_format">Password must contain at least %1$d characters,
        one number, one uppercase, and one lowercase letter</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="token_not_found">Token not found</string>
    <string name="username_and_password_do_not_match">Username and Password do not match</string>
    <string name="attendee_already_added">Attendee already added</string>
    <string name="user_not_found">User not found</string>
    <string name="please_check_your_internet_connection">"Please check your network connection"</string>
    <string name="one_photo_not_added">1 photo was not added because it was too large</string>
    <string name="photos_not_added">%1$d photos were not added because they were too large</string>

    <!--logout messages -->
    <string name="logout_successful">Logout successful</string>

    <!--notification messages -->
    <string name="used_for_string_notification">Used for %1$s notifications</string>

</resources>
