<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topOfWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomOfWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".176" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topOfButtonHolderLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".23" />


    <TextView
        android:id="@+id/welcomeMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_welcome_message"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topOfWelcome"
        app:layout_constraintBottom_toTopOf="@id/bottomOfWelcome" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonHolderLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_top"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topOfButtonHolderLayout">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/startOfTextBoxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".075" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/endOfTextBoxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".925" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topOfTextBoxes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".075" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomOfEmailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".165" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topOfPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".19" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomOfPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".28" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topOfLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".31" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomOfLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topOfSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".879" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottomOfSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".908" />




            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/emailAddressLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/rounded_edit_text"
                android:backgroundTint="@color/light_grey"
                app:layout_constraintTop_toBottomOf="@+id/topOfTextBoxes"
                app:layout_constraintBottom_toTopOf="@id/bottomOfEmailAddress"
                app:layout_constraintStart_toEndOf="@id/startOfTextBoxes"
                app:layout_constraintEnd_toStartOf="@+id/endOfTextBoxes">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/startOfEditText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".061" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/endOfEditText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".878" />


                <EditText
                    android:id="@+id/emailAddressEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/email_address_preview"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColorHighlight="@color/black"
                    android:textColorLink="@color/black"
                    android:textCursorDrawable="@null"
                    app:layout_constraintStart_toEndOf="@id/startOfEditText1"
                    app:layout_constraintEnd_toStartOf="@id/endOfEditText1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                </EditText>

                <ImageView
                    android:id="@+id/emailAddressCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_check_24"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/endOfEditText1"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                </ImageView>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/passwordLayout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/rounded_edit_text"
                android:backgroundTint="@color/light_grey"
                app:layout_constraintTop_toBottomOf="@+id/topOfPassword"
                app:layout_constraintBottom_toTopOf="@+id/bottomOfPassword"
                app:layout_constraintStart_toEndOf="@id/startOfTextBoxes"
                app:layout_constraintEnd_toStartOf="@+id/endOfTextBoxes">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/startOfEditText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".061" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/endOfEditText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".878" />

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/password_preview"
                    android:password="true"
                    android:singleLine="true"
                    android:textAlignment="viewStart"
                    android:textColorHighlight="@color/black"
                    android:textCursorDrawable="@null"
                    app:layout_constraintStart_toEndOf="@id/startOfEditText2"
                    app:layout_constraintEnd_toStartOf="@id/endOfEditText2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                </EditText>

                <ImageButton
                    android:id="@+id/passwordVisibilityButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_baseline_visibility_off_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/endOfEditText2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                </ImageButton>



            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/rounded_button"
                android:text="@string/login_button"
                app:layout_constraintTop_toBottomOf="@id/topOfLoginButton"
                app:layout_constraintStart_toEndOf="@id/startOfTextBoxes"
                app:layout_constraintEnd_toStartOf="@+id/endOfTextBoxes"
                app:layout_constraintBottom_toTopOf="@+id/bottomOfLoginButton">

            </Button>


        <TextView
            android:id="@+id/noAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_message"
            app:layout_constraintTop_toBottomOf="@id/topOfSignUp"
            app:layout_constraintBottom_toTopOf="@id/bottomOfSignUp"
            app:layout_constraintEnd_toStartOf="@id/signUpButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent">

        </TextView>

        <TextView
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:text="@string/sign_up_button"
            android:textColor="#3F51B5"
            app:layout_constraintTop_toBottomOf="@id/topOfSignUp"
            app:layout_constraintBottom_toTopOf="@id/bottomOfSignUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/noAccountTextView">

        </TextView>





    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
